# heat_exchange

./: App.cpp  App.h  Arrays.cpp  Arrays.h  CMakeLists.txt  Enviroment.cpp  Environment.h  Seeders.cpp  Seeders.h  main.cpp  math_test.py
glad/include/glad/: glad.h
glad/src/: glad.c
